[gd_scene load_steps=14 format=2]

[ext_resource path="res://hsz/monsters/test1/test1.gd" type="Script" id=1]
[ext_resource path="res://hsz/monsters/test1/bat.png" type="Texture" id=2]
[ext_resource path="res://hsz/ai/provoking/provoking.tscn" type="PackedScene" id=3]
[ext_resource path="res://hsz/utils/hurtbox.gd" type="Script" id=4]
[ext_resource path="res://txy/stats/Stats.gd" type="Script" id=5]
[ext_resource path="res://hsz/others/shadow.png" type="Texture" id=6]
[ext_resource path="res://hsz/utils/detection.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 0.0

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="CircleShape2D" id=7]
radius = 256.0

[sub_resource type="CircleShape2D" id=8]
radius = 32.0

[node name="Test" type="KinematicBody2D"]
script = ExtResource( 1 )
acceleration = 1800.0
max_speed = 250.0

[node name="Stats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 2 )
hframes = 5

[node name="FlickerTimer" type="Timer" parent="."]

[node name="TrappedTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fly"
anims/Fly = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -18 )
shape = SubResource( 6 )

[node name="ChaseDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseDetection"]
shape = SubResource( 7 )

[node name="FearDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FearDetection"]
shape = SubResource( 8 )

[node name="ProvokingAI" parent="." instance=ExtResource( 3 )]
chase_detection_path = NodePath("../ChaseDetection")
fear_detection_path = NodePath("../FearDetection")

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
[connection signal="timeout" from="TrappedTimer" to="." method="_on_TrappedTimer_timeout"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_Hurtbox_hurt"]
